# ai-language-learning-platform

./: .env.development  .env.example  .gitignore  AI_SYSTEMS_FIX_GUIDE.md  ARCHON_AUTOMATION_GUIDE.md  BMAD_PLATFORM_EXECUTION_PLAN.md  COMPLETE_PLATFORM_ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  IMMEDIATE_ACTION_PLAN.md  MOCK_DATA_SOLUTION_SUMMARY.md  NETWORK_CONNECTIVITY_SOLUTION.md  PLATFORM_COMPLETION_ROADMAP.md  PROJECT_REORGANIZATION_PLAN.md  PYDANTIC_TESTING_SOLUTION.md  QUICK_START_GUIDE.md  README.md  REFACTORING_COMPLETION_SUMMARY.md  SETUP.md  SETUP_COMPLETE.md  TEST_RESULTS_SUMMARY.md  UX_ENHANCEMENT_REPORT.md  docker-compose.yml  github-setup.sh  mcp-config.json  organize-repository.sh  package-lock.json  setup-dev-environment.sh  start-dev.sh  start-development.sh  start-frontend-dev.sh  test-connectivity-solution.sh  test_ai_systems.py  v0-sales-portal-complete.md  v0-ui-enhancement-prompt.md
server/: .env.example  CONTEXT_SAVE.md  DATABASE_PRODUCTION_READY_SUMMARY.md  DEPLOYMENT_SUCCESS_SUMMARY.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  PRODUCTION_SETUP.md  PROJECT_COMPLETION_SUMMARY.md  QA_ASSESSMENT_REPORT.md  QA_IMPLEMENTATION_SUMMARY.md  REDIS_CACHE_README.md  SPRINT_1_PROGRESS_REPORT.md  SPRINT_2_PROGRESS_REPORT.md  SPRINT_3_PROGRESS_REPORT.md  create_admin_user.py  create_test_user.py  demo_pydantic_concept.py  env.example  pyproject.toml  pytest.ini  pytest_output.txt  quick_start.py  render.yaml  requirements.txt  run.py  run_ai_tests.py  run_simple_ai_tests.py  setup_check.py  setup_database_v2.py  simple_ai_test_results.json  simple_create_user.py  simple_mock_server.py  simple_pydantic_demo.py  simple_redis_test.py  simple_test_submission.py  test_ai_workflow.py  test_api.py  test_course_request.py  test_pydantic_factories.py  (+3 more)
server/.github/workflows/: qa_pipeline.yml
server/app/: __init__.py  config.py  database.py  init_db.py  main.py  main_simple.py  main_v2.py  models.py  routes.py
server/app/core/: database.py
server/app/database/: __init__.py
server/app/models/: course.py  database_models.py  sales.py  user.py
server/app/routes/: agent_routes.py  ai_routes.py  auth_routes.py  auth_routes_v2.py  course_routes.py  health_routes.py  sales_routes.py  server_routes_auth.py  server_routes_course_manager.py  server_routes_main.py  server_routes_sales.py  server_routes_student.py  server_routes_trainer.py  sop_routes.py
server/app/schemas/: auth.py  sales.py
server/app/services/: advanced_nlp_service.py  agent_health_service.py  ai_service.py  (+21 more)
server/backups/: config_backup_20250712_214357.json  config_backup_20250712_214647.json
server/scripts/: backup_strategy.sh  db_migrate_prod.py  migrate_to_postgresql.py  setup_database.py
server/tests/: conftest.py  test_ai_enhancements.py  test_ai_enhancements_simple.py  test_infrastructure_repair.py
(+442 files in other folders)
